--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-MONGO_URI = mongodb+srv://kybereket1223:H0Ri0YyhAmYsOQei@cluster0.fr5e8.mongodb.net/
+MONGO_URI = mongodb+srv://kybereket1223:ewc0ezWJ2gVmHTbi@cluster0.oostg.mongodb.net/
 API_KEY = 113821862745825
 API_SECRET = tBGJ-gt2PidZQ9RrvkAvuJ9Ergs
 CLOUD_NAME = dlhufyco2 
