--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,4 @@
 MONGO_URI = mongodb+srv://kybereket1223:iEw7E8oiN7X4ki7G@cluster0.i4pik.mongodb.net/
 JWT_SECRET = JzdWIiOiIxMjM0NTY3ODkwIiwibmFtZSI6Ikpva
 
+UsaJQ7ROzmUJzepz
